# Aeldur

./: AUTHORS.md  CMakeLists.txt
Client/: CMakeLists.txt
Client/Source/Activities/: Game.cpp  Game.hpp  Gateway.cpp  Gateway.hpp  Lobby.cpp  Lobby.hpp
Client/Source/Controller/: Controller.cpp  Controller.hpp  Director.cpp  Director.hpp
Client/Source/Core/: Activity.cpp  Activity.hpp  Application.cpp  Application.hpp  Options.cpp  Options.hpp
Common/: CMakeLists.txt
Common/Source/Network/: Packets.cpp  Packets.hpp
Common/Source/Protocol/: Protocol.cpp  Protocol.hpp
Common/Source/World/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  Character.cpp  Character.hpp  Drawable.cpp  Drawable.hpp  Entities.cpp  Entities.hpp  Entity.cpp  Entity.hpp  Object.cpp  Object.hpp  Partitioner.cpp  Partitioner.hpp  Region.cpp  Region.hpp  RegionLoader.cpp  RegionLoader.hpp  Tile.cpp  Tile.hpp  Universe.cpp  Universe.hpp  World.cpp  World.hpp
Common/Source/World/Ability/: Abilities.cpp  Abilities.hpp  Ability.cpp  Ability.hpp  Attribute.cpp  Attribute.hpp  Effect.cpp  Effect.hpp  Marker.cpp  Marker.hpp  Modifier.cpp  Modifier.hpp  Stat.cpp  Stat.hpp  StatArchetype.cpp  StatArchetype.hpp  StatFlyweight.cpp  StatFlyweight.hpp  StatModifier.cpp  StatModifier.hpp
Server/: CMakeLists.txt
Server/Source/Account/: Account.cpp  Account.hpp  AccountRepository.cpp  AccountRepository.hpp  AccountService.cpp  AccountService.hpp
Server/Source/Core/: Application.cpp  Application.hpp  Options.cpp  Options.hpp
Server/Source/Database/: Database.cpp  Database.hpp
Server/Source/Network/: Endpoint.cpp  Endpoint.hpp  Peer.cpp  Peer.hpp
Server/Source/Protocol/: Endpoint.cpp  Endpoint.hpp  Peer.cpp  Peer.hpp
Server/Source/User/: User.cpp  User.hpp  UserRepository.cpp  UserRepository.hpp  UserService.cpp  UserService.hpp
